--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "jwt-decode": "^4.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.0.1",
-    "nodemailer": "^6.9.7"
+    "nodemailer": "^6.9.7",
+    "socket.io": "^4.7.4"
   }
 }
